--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
+    "react-resizable-panels": "^2.0.19",
     "react-simple-maps": "^3.0.0",
     "recharts": "^2.12.3",
     "tailwind-merge": "^2.2.2",
