--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@tailwindcss/container-queries": "^0.1.1",
+    "@tanstack/query-sync-storage-persister": "^5.54.1",
+    "@tanstack/react-query": "^5.55.0",
+    "@tanstack/react-query-persist-client": "^5.55.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.363.0",
     "openmeteo": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-query": "^3.39.3",
     "react-resizable-panels": "^2.0.19",
     "react-simple-maps": "^3.0.0",
     "recharts": "^2.12.3",
+    "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
   },
