--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.363.0",
     "openmeteo": "^1.1.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-resizable-panels": "^2.0.19",
     "react-simple-maps": "^3.0.0",
     "recharts": "^2.12.3",
@@ -34,8 +34,8 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.7",
     "@types/node": "^20.11.30",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.0",
     "@types/react-simple-maps": "^3.0.4",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
