--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@tanstack/react-query-persist-client": "^5.77.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.511.0",
     "openmeteo": "^1.2.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-leaflet": "^5.0.0",
     "react-resizable-panels": "^3.0.2",
     "react-simple-maps": "^3.0.0",
     "recharts": "^2.15.3",
@@ -33,6 +35,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.7",
+    "@types/leaflet": "^1.9.18",
     "@types/node": "^22.15.21",
     "@types/react": "19.1.5",
     "@types/react-dom": "19.1.5",
