--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "react-resizable-panels": "^3.0.2",
     "recharts": "^2.15.3",
     "superjson": "^2.2.2",
-    "tailwind-merge": "^3.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.7",
@@ -46,6 +45,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.7",
+    "tw-animate-css": "^1.3.0",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
     "vite-plugin-mkcert": "^1.17.8"
